# verbose-guacamole

./: CMakeLists.txt  Dockerfile  README.md
src/: cmd.h  tick.cpp  tick.h
src/consumer/: consumer.cpp  consumer.h  main.cpp
src/producer/: main.cpp  producer.cpp  producer.h
src/producer/coinbase/: connection.h  feeder.h
